<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.nino.calculator.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:background="@color/blue_grey_200">

    <TextView
        android:text="@string/help_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/operand1"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/operand2" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdd"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored" />

        <Button
            android:text="@string/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSub"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <Button
            android:text="@string/divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDiv"
            style="@style/Widget.AppCompat.Button.Colored" />

        <Button
            android:text="@string/multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMult"
            style="@style/Widget.AppCompat.Button.Colored" />

        <Button
            android:text="@string/clr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnClr"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored" />
    </LinearLayout>

    <TextView
        android:text="@string/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <TextView
        android:text="0.00"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

</LinearLayout>
